; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/fpu/extr_xstate.c_xfeatures_mxcsr_quirk.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/fpu/extr_xstate.c_xfeatures_mxcsr_quirk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XFEATURE_MASK_SSE = common dso_local global i32 0, align 4
@XFEATURE_MASK_YMM = common dso_local global i32 0, align 4
@XFEATURE_MASK_FP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @xfeatures_mxcsr_quirk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfeatures_mxcsr_quirk(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @XFEATURE_MASK_SSE, align 4
  %6 = load i32, i32* @XFEATURE_MASK_YMM, align 4
  %7 = or i32 %5, %6
  %8 = and i32 %4, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @XFEATURE_MASK_FP, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %18

17:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %16, %10
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
